# planskop

./: .gitignore  README.md
next/: _auth.config.ts  _middleware.ts  auth.ts  drizzle.config.ts  jest.config.ts  library.json  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
next/__tests__/: FormActionPlan.test.tsx  addAllowedDuration.ts  calculateRemainingDuration.ts  extractMinutesFromDuration.ts  extractTimeRange.ts  fillHoursInBetween.test.tsx  resolvePath.ts  timeBasedDurationToMinutes.ts  timeStrToMinutes.ts
next/_pkg/: planskop_rust_bg.js
next/app/: famous-people-routines.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
next/components/: AppIntro.module.css  AppIntro.tsx  Avatar.module.css  Avatar.tsx  Banner.tsx  Buttons.module.css  Buttons.tsx  Card.module.css  Card.tsx  ClerkUserCard.tsx  ClerkUserCardWrapper.tsx  ColorLegend.tsx  Cool.module.css  DailyPlanDetail.tsx  DailyPlanList.tsx  EmailTemplates.tsx  HabitCalendar.module.css  HabitCalendar.tsx  HandWrittenNums.tsx  Header.tsx  HourlyRoutinesChart.tsx  Icons.tsx  LabelState.tsx  LatestPublicSlots.tsx  Logo.module.css  Logo.tsx  MainNavBar.tsx  Modal.module.css  Modal.tsx  Popover.module.css  Popover.tsx  RemainingDuration.tsx  SectionRandomFamous.tsx  SlowlyDownyard.tsx  StatusLabel.tsx  UserWelcomeTitle.tsx  WheelAnim.module.css  WheelAnim.tsx
next/context/: ThemeContext.tsx
next/data/: habit-presets-300.js  index.ts
next/db/: index.ts  queries.ts  schema.ts
next/hooks/: useActionImg.ts  (+5 more)
rust/: Cargo.toml
rust/src/: candle_test.rs  lib.rs
(+131 files in other folders)
