[package]
name = "planskop_rust"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
chrono = "0.4"
chrono-tz="0.10.0"
hf-hub = "0.3.2"
tokenizers = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.6"
rrule = "0.13.0"





[dev-dependencies]
wasm-bindgen-test = "0.3.43"


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
