[package]
name = "planskop_rust"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
chrono = "0.4"
chrono-tz="0.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.6"
rrule = "0.13.0"


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
